--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       - 8.8.8.8
     devices:
       - /dev/net/tun:/dev/net/tun
-    cpus: ${ALT_MIN_CPU_LIMIT:-0.1}
-    mem_limit: ${RAM_LIMIT:-256m}
-    mem_reservation: ${RAM_RESERVE:-128m}
+    cpus: ${TUN2SOCKS_CPU_LIMIT:-0.05} # Updated to a much smaller value
+    mem_limit: ${TUN2SOCKS_RAM_LIMIT:-64m} # Updated
+    mem_reservation: ${TUN2SOCKS_RAM_RESERVE:-32m}
     logging:
       driver: json-file
       options:
@@ -36,6 +36,9 @@ services:
     environment:
       - TM_TOKEN=${TRAFFMONETIZER_TOKEN}
     command: start accept --token ${TRAFFMONETIZER_TOKEN}
+    cpus: ${TRAFFMONETIZER_CPU_LIMIT:-0.06} # NEW: Add CPU limit
+    mem_limit: ${TRAFFMONETIZER_RAM_LIMIT:-64m} # NEW: Add RAM limit
+    mem_reservation: ${TRAFFMONETIZER_RAM_RESERVE:-32m}
     logging:
       driver: json-file
       options:
@@ -49,6 +52,9 @@ services:
     environment:
         - RP_EMAIL=nguyentanloc180@gmail.com
         - RP_API_KEY=8873dd7c-f936-4deb-b128-c15dc54813da
+    cpus: ${repocket_CPU_LIMIT:-0.06} # NEW: Add CPU limit
+    mem_limit: ${repocket_RAM_LIMIT:-64m} # NEW: Add RAM limit
+    mem_reservation: ${repocket_RAM_RESERVE:-32m}
     logging:
       driver: json-file
       options:
